force-app/main/default/objects/Case/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <description>Related to user story CGFP1-62</description>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Department__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Overall Experience</fullName>
            </value>
            <value>
                <fullName>The Star Entertainment Group</fullName>
            </value>
            <value>
                <fullName>Audio Visual</fullName>
            </value>
            <value>
                <fullName>Bars</fullName>
            </value>
            <value>
                <fullName>Events / Functions</fullName>
            </value>
            <value>
                <fullName>Theatre</fullName>
            </value>
            <value>
                <fullName>Astral Tower &amp; Residences</fullName>
            </value>
            <value>
                <fullName>Dorsett Hotel</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>MGF Drinks Service</fullName>
            </value>
            <value>
                <fullName>PGR Overall Experience</fullName>
            </value>
            <value>
                <fullName>Premium Services</fullName>
            </value>
            <value>
                <fullName>Restaurants</fullName>
            </value>
            <value>
                <fullName>Table Games</fullName>
            </value>
            <value>
                <fullName>The Darling</fullName>
            </value>
            <value>
                <fullName>The Darling Syd</fullName>
            </value>
            <value>
                <fullName>The Star Grand</fullName>
            </value>
            <value>
                <fullName>Treasury Hotel</fullName>
            </value>
            <value>
                <fullName>Cashier Services</fullName>
            </value>
            <value>
                <fullName>Customer Relations</fullName>
            </value>
            <value>
                <fullName>Electronic Gaming</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>The Star Club Desk</fullName>
            </value>
            <value>
                <fullName>Azure Spa &amp; Fitness</fullName>
            </value>
            <value>
                <fullName>Beauty / Spa</fullName>
            </value>
            <value>
                <fullName>Contact Centre</fullName>
            </value>
            <value>
                <fullName>Facility Cleaning</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>The Star Residences</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>