force-app/main/default/objects/Case/fields/Case_Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>Case_Email_Subject__c</fullName>
    <description>CRM2-2742: Used as the subject for the Cashless Support Email template</description>
    <formula>CASE(Relating_to__c,
&quot;Star App Funds Transfer (SAFT)&quot;, &quot;DIGITALWALLET Incident attncashless : &quot;,
&quot;Cashier Services&quot;, &quot;CASHLESSCAGE Incident attncashless : &quot;,
&quot;Cashless Table&quot;, &quot;CASHLESSTABLE Incident attncashless : &quot;,
&quot;Cashless EGM&quot;, &quot;CASHLESSEG Incident attncashless : &quot;,
&quot;Case # &quot; +  CaseNumber)</formula>
    <label>Case Email Subject</label>
    <type>Text</type>
</CustomField>