force-app/main/default/objects/Case/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Related to user story CGFP1-62</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Area__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Overall Experience</fullName>
            </value>
            <value>
                <fullName>The Star Entertainment Group</fullName>
            </value>
            <value>
                <fullName>Events / Functions</fullName>
            </value>
            <value>
                <fullName>MGF</fullName>
            </value>
            <value>
                <fullName>PGR</fullName>
            </value>
            <value>
                <fullName>24/7 Sport Bar</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Theatre</fullName>
            </value>
            <value>
                <fullName>Ticket Master</fullName>
            </value>
            <value>
                <fullName>Room Service</fullName>
            </value>
            <value>
                <fullName>Atrium</fullName>
            </value>
            <value>
                <fullName>By George</fullName>
            </value>
            <value>
                <fullName>Centre Bar</fullName>
            </value>
            <value>
                <fullName>Cherry</fullName>
            </value>
            <value>
                <fullName>Drink Vending Machines</fullName>
            </value>
            <value>
                <fullName>Jade Rabbit</fullName>
            </value>
            <value>
                <fullName>Keno Bar</fullName>
            </value>
            <value>
                <fullName>Kiyomi Bar</fullName>
            </value>
            <value>
                <fullName>Latitude</fullName>
            </value>
            <value>
                <fullName>Live Wire</fullName>
            </value>
            <value>
                <fullName>Marquee</fullName>
            </value>
            <value>
                <fullName>Nineteen at the Star</fullName>
            </value>
            <value>
                <fullName>Oasis</fullName>
            </value>
            <value>
                <fullName>Orchid Room</fullName>
            </value>
            <value>
                <fullName>Outdoor Bar - GKB</fullName>
            </value>
            <value>
                <fullName>Poker Bar</fullName>
            </value>
            <value>
                <fullName>Poolside Bar</fullName>
            </value>
            <value>
                <fullName>Pulse</fullName>
            </value>
            <value>
                <fullName>Rock Lily</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>