force-app/main/default/objects/Case/fields/Close_Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>Close_Case_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Close Case Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>