force-app/main/default/objects/Case/fields/Compliance__c.field-meta.xml
<CustomField>
    <fullName>Compliance__c</fullName>
    <description>Related to user story CGFP1-62</description>
    <label>Compliance</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>PR</fullName>
            </value>
            <value>
                <fullName>Responsible Gaming</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>