force-app/main/default/objects/Case/fields/Contravention_Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Contravention_Event_Date__c</fullName>
    <description>The date when event(Exclusion, Revocation, and Contravention) occurred.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Incident Date</label>
    <type>DateTime</type>
</CustomField>