force-app/main/default/objects/Case/fields/Date_of_Visit__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Visit__c</fullName>
    <description>Related to the user story CGFP1-62</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Visit</label>
    <type>Date</type>
</CustomField>