force-app/main/default/objects/Case/fields/Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Decision_Date__c</fullName>
    <description>The date that the decision was made by the business for the revocation outcome.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Decision Date</label>
    <type>Date</type>
</CustomField>