force-app/main/default/objects/Case/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>Related to user story CGFP1-62</description>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Property__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Entertainment</fullName>
            </value>
            <value>
                <fullName>F&amp;B</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Gaming</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Property Services</fullName>
            </value>
            <value>
                <fullName>Public Relations / Branding</fullName>
            </value>
            <value>
                <fullName>VIP Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>