force-app/main/default/objects/Case/fields/Event_Related__c.field-meta.xml
<CustomField>
    <fullName>Event_Related__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related to user story CGFP1-62</description>
    <label>Event Related</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>