force-app/main/default/objects/Case/fields/Exclusion__c.field-meta.xml
<CustomField>
    <fullName>Exclusion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to Exclusion record during the revocation flow to point the primary exclusion</description>
    <label>Exclusion</label>
    <referenceTo>Exl_Exclusion__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>