force-app/main/default/objects/Case/fields/Exl_Form_3H__c.field-meta.xml
<CustomField>
    <fullName>Exl_Form_3H__c</fullName>
    <formula>HYPERLINK(&apos;https://sydwcgwt10.casino.internal/ibmcognos/bi/?pathRef=.public_folders%2FCasino%2BPublic%2BFolders%2FSalesForce%2FUAT%2F3Hv2&apos;, &quot;Click to open Form 3H&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Form 3H</label>
    <type>Text</type>
</CustomField>