force-app/main/default/objects/Case/fields/Exl_Is_Weekend__c.field-meta.xml
<CustomField>
    <fullName>Exl_Is_Weekend__c</fullName>
    <description>If the case is replicated on Weekend it would be available in the list view for CLM - Exclusion Users</description>
    <formula>IF(OR(WEEKDAY(TODAY()) = 1, WEEKDAY(TODAY()) = 7), TRUE, FALSE)</formula>
    <label>Is Weekend</label>
    <type>Checkbox</type>
</CustomField>