force-app/main/default/objects/Case/fields/Exl_Linked_Exclusions__c.field-meta.xml
<CustomField>
    <fullName>Exl_Linked_Exclusions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Linked Exclusions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>