force-app/main/default/objects/Case/fields/Exl_Nextbutton_Qld__c.field-meta.xml
<CustomField>
    <fullName>Exl_Nextbutton_Qld__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nextbutton_Qld</label>
    <length>255</length>
    <type>Text</type>
</CustomField>