force-app/main/default/objects/Case/fields/Exl_ReplicatedStateEnabled__c.field-meta.xml
<CustomField>
    <fullName>Exl_ReplicatedStateEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is set to true when the replicated state is active and ready for action by the relevant team during the Apply Exclusion cycle.</description>
    <label>Replicated State Enabled</label>
    <type>Checkbox</type>
</CustomField>