force-app/main/default/objects/Case/fields/Exl_Source_Case__c.field-meta.xml
<CustomField>
    <fullName>Exl_Source_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Case</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.ContactId</field>
            <operation>equals</operation>
            <valueField>$Source.ContactId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Cases (Source Case)</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>