force-app/main/default/objects/Case/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Feedback</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>