force-app/main/default/objects/Case/fields/Feedback_Id__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Id__c</fullName>
    <description>This field is use for the data migration from the SalesLogix</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Feedback Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>