force-app/main/default/objects/Case/fields/First_Response__c.field-meta.xml
<CustomField>
    <fullName>First_Response__c</fullName>
    <description>CRM2-2606</description>
    <encryptionScheme>None</encryptionScheme>
    <label>First Response</label>
    <type>Date</type>
</CustomField>