force-app/main/default/objects/Case/fields/I_REQUIRE_A_RESPONSE__c.field-meta.xml
<CustomField>
    <fullName>I_REQUIRE_A_RESPONSE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Related to user story CGFP1-62</description>
    <label>I REQUIRE A RESPONSE</label>
    <type>Checkbox</type>
</CustomField>