force-app/main/default/objects/Case/fields/Incident_Report_Number__c.field-meta.xml
<CustomField>
    <fullName>Incident_Report_Number__c</fullName>
    <description>Reference to incident in risk</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Incident Report Number</label>
    <length>144</length>
    <type>Text</type>
</CustomField>