force-app/main/default/objects/Case/fields/Incident_URL__c.field-meta.xml
<CustomField>
    <fullName>Incident_URL__c</fullName>
    <description>Enable direct linking to the corresponding Archer incident.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Incident URL</label>
    <type>Url</type>
</CustomField>