force-app/main/default/objects/Case/fields/Interpreter__c.field-meta.xml
<CustomField>
    <fullName>Interpreter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Interpreter required.</description>
    <label>Interpreter</label>
    <type>Checkbox</type>
</CustomField>