force-app/main/default/objects/Case/fields/Interpreter_Name__c.field-meta.xml
<CustomField>
    <fullName>Interpreter_Name__c</fullName>
    <description>Name of interpreter.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Interpreter Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>