force-app/main/default/objects/Case/fields/Issue__c.field-meta.xml
<CustomField>
    <fullName>Issue__c</fullName>
    <description>Related to user story CGFP1-62</description>
    <label>Issue</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Overall Experience</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Covid-19</fullName>
            </value>
            <value>
                <fullName>Renovation Impact</fullName>
            </value>
            <value>
                <fullName>Impressive Venue Overall</fullName>
            </value>
            <value>
                <fullName>Rules &amp; Regulations</fullName>
            </value>
            <value>
                <fullName>Feedback form / policy concerns</fullName>
            </value>
            <value>
                <fullName>Bell Review</fullName>
            </value>
            <value>
                <fullName>AV Quality</fullName>
            </value>
            <value>
                <fullName>Entertainment Content</fullName>
            </value>
            <value>
                <fullName>Music Volume / Clarity</fullName>
            </value>
            <value>
                <fullName>Entertainment Quality</fullName>
            </value>
            <value>
                <fullName>Food Quality</fullName>
            </value>
            <value>
                <fullName>Movie</fullName>
            </value>
            <value>
                <fullName>Audio</fullName>
            </value>
            <value>
                <fullName>Dress Code</fullName>
            </value>
            <value>
                <fullName>Health and Safety Concern</fullName>
            </value>
            <value>
                <fullName>Seating</fullName>
            </value>
            <value>
                <fullName>Patron Conduct</fullName>
            </value>
            <value>
                <fullName>Comfort</fullName>
            </value>
            <value>
                <fullName>Staff skills and knowledge</fullName>
            </value>
            <value>
                <fullName>Value</fullName>
            </value>
            <value>
                <fullName>Package Deal / Offer</fullName>
            </value>
            <value>
                <fullName>Service - Ticketek Office</fullName>
            </value>
            <value>
                <fullName>Wait Times</fullName>
            </value>
            <value>
                <fullName>Alleged Foreign Object</fullName>
            </value>
            <value>
                <fullName>Beverage Quality</fullName>
            </value>
            <value>
                <fullName>Item replenishment</fullName>
            </value>
            <value>
                <fullName>Accuracy of Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>