force-app/main/default/objects/Case/fields/Membership_Id__c.field-meta.xml
<CustomField>
    <fullName>Membership_Id__c</fullName>
    <description>US CGFP1-62</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Membership Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>