force-app/main/default/objects/Case/fields/Overall_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Overall_Resolution__c</fullName>
    <description>Related to user story CGFP1-62</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Overall Resolution</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>