force-app/main/default/objects/Case/fields/Parent_Case__c.field-meta.xml
<CustomField>
    <fullName>Parent_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This will be visible only on Tickets (Child Cases)</description>
    <label>Parent Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Ticket</relationshipLabel>
    <relationshipName>Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>