force-app/main/default/objects/Case/fields/Patron_ID__c.field-meta.xml
<CustomField>
    <fullName>Patron_ID__c</fullName>
    <description>Patron Id from the Patron</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Patron ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>