force-app/main/default/objects/Case/fields/POE_Area__c.field-meta.xml
<CustomField>
    <fullName>POE_Area__c</fullName>
    <description>Area where incident occurred.</description>
    <label>POE Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entire Property</fullName>
            </value>
            <value>
                <fullName>CCA, Wagering &amp; Keno</fullName>
            </value>
            <value>
                <fullName>Casino Licensed Area</fullName>
            </value>
            <value>
                <fullName>CCA</fullName>
                <isActive>false</isActive>
                <label>CCA</label>
            </value>
            <value>
                <fullName>Wagering &amp; Keno</fullName>
                <isActive>false</isActive>
                <label>Wagering &amp; Keno</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>