force-app/main/default/objects/Case/fields/POE_Under__c.field-meta.xml
<CustomField>
    <fullName>POE_Under__c</fullName>
    <description>Regulation related to prevention.</description>
    <label>POE Under</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Section 91O</fullName>
            </value>
            <value>
                <fullName>Section 92</fullName>
            </value>
            <value>
                <fullName>Section 93A</fullName>
            </value>
            <value>
                <fullName>Section 94</fullName>
            </value>
            <value>
                <fullName>Section 95</fullName>
            </value>
            <value>
                <fullName>NSW Section 81</fullName>
            </value>
            <value>
                <fullName>ICM 13</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>