force-app/main/default/objects/Case/fields/Post_Code__c.field-meta.xml
<CustomField>
    <fullName>Post_Code__c</fullName>
    <description>Related to user story CGFP1-62</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Post Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>