force-app/main/default/objects/Case/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <description>Related to user story CGFP1-62</description>
    <label>Property</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brisbane</fullName>
            </value>
            <value>
                <fullName>Gold Coast</fullName>
            </value>
            <value>
                <fullName>Sydney</fullName>
            </value>
            <value>
                <fullName>The Star Sydney</fullName>
            </value>
            <value>
                <fullName>The Star Brisbane</fullName>
            </value>
            <value>
                <fullName>The Star Gold Coast</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
                <isActive>false</isActive>
                <label>Corporate</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>