force-app/main/default/objects/Case/fields/Relating_to__c.field-meta.xml
<CustomField>
    <fullName>Relating_to__c</fullName>
    <description>Related to user story CGFP1-62</description>
    <label>Relating to</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Property__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bars</fullName>
            </value>
            <value>
                <fullName>Casino</fullName>
            </value>
            <value>
                <fullName>Event Centre</fullName>
            </value>
            <value>
                <fullName>Gift Cards</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Restaurants</fullName>
            </value>
            <value>
                <fullName>Retailers</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>TAB</fullName>
            </value>
            <value>
                <fullName>Theater</fullName>
            </value>
            <value>
                <fullName>Theatre</fullName>
            </value>
            <value>
                <fullName>The SPA at Darling Harbour</fullName>
            </value>
            <value>
                <fullName>The Star App</fullName>
            </value>
            <value>
                <fullName>The Star Club</fullName>
            </value>
            <value>
                <fullName>The Star Express</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Azure Spa &amp; Fitness</fullName>
            </value>
            <value>
                <fullName>Event / Conference</fullName>
            </value>
            <value>
                <fullName>Isoletto Pool Bar</fullName>
            </value>
            <value>
                <fullName>The Star Grand Pool Area</fullName>
            </value>
            <value>
                <fullName>The Shop @ The Star</fullName>
            </value>
            <value>
                <fullName>The Star At Home</fullName>
            </value>
            <value>
                <fullName>Fitness Centre</fullName>
            </value>
            <value>
                <fullName>VIP Services</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>The Grand Pool Area</fullName>
            </value>
            <value>
                <fullName>Star App Funds Transfer (SAFT)</fullName>
            </value>
            <value>
                <fullName>Cashier Services</fullName>
            </value>
            <value>
                <fullName>Cashless Table</fullName>
            </value>
            <value>
                <fullName>Cashless EGM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>