force-app/main/default/objects/Case/fields/Relating_to_Sub_Category1__c.field-meta.xml
<CustomField>
    <fullName>Relating_to_Sub_Category1__c</fullName>
    <description>US CGFP1-62</description>
    <label>Relating to Sub Category1</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Relating_To_Sub_Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Casino Cashiers</fullName>
            </value>
            <value>
                <fullName>Electronic Gaming Machines</fullName>
            </value>
            <value>
                <fullName>Table Games</fullName>
            </value>
            <value>
                <fullName>Electronic Gaming</fullName>
            </value>
            <value>
                <fullName>Service Desk</fullName>
            </value>
            <value>
                <fullName>Adding or withdrawing funds</fullName>
            </value>
            <value>
                <fullName>Budgets or limits</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>