force-app/main/default/objects/Case/fields/Relating_To_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Relating_To_Sub_Category__c</fullName>
    <label>Relating To Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Relating_to_Sub_Menu__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hotel Room</fullName>
            </value>
            <value>
                <fullName>In Room Dining</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Casino Cashiers</fullName>
            </value>
            <value>
                <fullName>Electronic Gaming Machines</fullName>
            </value>
            <value>
                <fullName>Table Games</fullName>
            </value>
            <value>
                <fullName>Premium Gaming Room</fullName>
            </value>
            <value>
                <fullName>Oasis</fullName>
            </value>
            <value>
                <fullName>Sovereign</fullName>
            </value>
            <value>
                <fullName>Orchid Room</fullName>
            </value>
            <value>
                <fullName>The Ground Floor Suite</fullName>
            </value>
            <value>
                <fullName>The Suite</fullName>
            </value>
            <value>
                <fullName>Turbines Health Club</fullName>
            </value>
            <value>
                <fullName>Executive Floor</fullName>
            </value>
            <value>
                <fullName>Reception - Check In / Out</fullName>
            </value>
            <value>
                <fullName>Cash Gaming</fullName>
            </value>
            <value>
                <fullName>Cashless Gaming</fullName>
            </value>
            <value>
                <fullName>Reception  Check in / out</fullName>
                <isActive>false</isActive>
                <label>Reception  Check in / out</label>
            </value>
            <value>
                <fullName>Reception - Check In/Out</fullName>
                <isActive>false</isActive>
                <label>Reception - Check In/Out</label>
            </value>
            <value>
                <fullName>Reception Check In Out</fullName>
                <isActive>false</isActive>
                <label>Reception Check In Out</label>
            </value>
            <value>
                <fullName>Reception Check in/out</fullName>
                <isActive>false</isActive>
                <label>Reception Check in/out</label>
            </value>
            <value>
                <fullName>Reception – Check in / out</fullName>
                <isActive>false</isActive>
                <label>Reception – Check in / out</label>
            </value>
            <value>
                <fullName>Reception+-+Check+In+%2F+Out</fullName>
                <isActive>false</isActive>
                <label>Reception+-+Check+In+%2F+Out</label>
            </value>
            <value>
                <fullName>Reception+Check+in%2Fout</fullName>
                <isActive>false</isActive>
                <label>Reception+Check+in%2Fout</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>